Modificaciones Iniciales del Layout

--- a/src/app/domains/header/header/header.component.html
+++ b/src/app/domains/header/header/header.component.html
@@ -1,1 +1,21 @@
 
+<header class="col-12 header" >
+  <section class="h-primera-seccion">
+
+    <div class="bloque-span-uno">
+
+      <span class="decoracion-uno"></span>
+      <span class="decoracion-uno"> </span>
+    </div>
+
+    <div class="bloque-span-dos">
+
+      <span class="decoracion-dos"></span>
+      <span class="decoracion-dos"></span>
+      <span class="decoracion-dos"></span>
+
+    </div>
+  </section>
+</header>
+
+
