--- a/src/app/domains/header/header/header.component.scss
+++ b/src/app/domains/header/header/header.component.scss
@@ -12,7 +12,9 @@ $text-color: #2c3e50;
 
 }
 
-
+// ================================PRIMERA SECCION ===============================
+//================================================================================
+//================================================================================
 .h-primera-seccion{
   position: absolute;
   height: 30%;
@@ -45,13 +47,13 @@ $text-color: #2c3e50;
 
 
 
-    width: 30%;  // Puedes ajustar el tamaño según tus necesidades
-    height: 25%; // Asegúrate de que el ancho y la altura sean iguales para formar un círculo
-    border-radius: 20%; // Esto convierte el cuadrado en un círculo
-    background-color: $secondary-color; // Color de fondo del círculo
+    width: 30%;
+    height: 25%;
+    border-radius: 20%;
+    background-color: $secondary-color;
 
-    color: white; // Color del texto
-    font-weight: bold; // Hace que el texto sea negrita
+    color: white;
+    font-weight: bold;
 
 
 }
@@ -82,14 +84,26 @@ $text-color: #2c3e50;
 
 
 
-  width: 10%;  // Puedes ajustar el tamaño según tus necesidades
-  height: 60%; // Asegúrate de que el ancho y la altura sean iguales para formar un círculo
-  border-radius: 100%; // Esto convierte el cuadrado en un círculo
-  background-color: $accent-color; // Color de fondo del círculo
+  width: 10%;
+  height: 60%;
+  border-radius: 100%;
+  background-color: $accent-color;
 
-  color: white; // Color del texto
-  font-weight: bold; // Hace que el texto sea negrita
+  color: white;
 
 
+}
+
+
+// ================================SEGUNDA SECCION ===============================
+//================================================================================
+//================================================================================
+
+.h-segunda-seccion{
+  position: static;
+  display: block;
+  height: 70%;
+  width: 100%;
+  background-color: $secondary-color;
 }
 
