Segundo Dia Prueba Tecnica

--- a/src/app/domains/header/header/header.component.html
+++ b/src/app/domains/header/header/header.component.html
@@ -1,26 +1,82 @@
 
-<header class="col-12 header" >
-  <section class="h-primera-seccion">
+<div class="row m-0 p-0">
 
-    <div class="bloque-span-uno">
+  <header class="col-12 header p-0 m-0" >
+    <section class="h-primera-seccion">
 
-      <span class="decoracion-uno"></span>
-      <span class="decoracion-uno"> </span>
-    </div>
+      <div class="bloque-span-uno">
 
-    <div class="bloque-span-dos">
+        <span class="decoracion-uno"></span>
+        <span class="decoracion-uno"> </span>
+      </div>
 
-      <span class="decoracion-dos"></span>
-      <span class="decoracion-dos"></span>
-      <span class="decoracion-dos"></span>
+      <div class="bloque-span-dos">
 
-    </div>
-  </section>
-  <section class="h-segunda-seccion">
-    <p>ss</p>
+        <span class="decoracion-dos"></span>
+        <span class="decoracion-dos"></span>
+        <span class="decoracion-dos"></span>
+
+      </div>
+    </section>
 
 
-  </section>
+
+    <section class="h-segunda-seccion">
+
+      <div class="bloque-span-tres">
+
+
+
+        <a href="#">
+        <button  class="custom" mat-fab color="primary" aria-label="HOME">
+            <mat-icon >home</mat-icon>
+          </button>
+        </a>
+      </div>
+
+      <div class="bloque-span-cuatro">
+
+
+        <nav class="navbar navbar-expand-lg ">
+          <div class="container-fluid">
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Usuario</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="admin">Admin</a>
+            </li>
+
+
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
+
 </header>
 
 
+</div>
