--- a/src/app/domains/header/header/header.component.scss
+++ b/src/app/domains/header/header/header.component.scss
@@ -1,9 +1,12 @@
 // Definición de la paleta de colores
 $primary-color: #063655;
 $secondary-color: #3498db;
-$accent-color: #e74c3c;
+$accent-color: #ababb3;
 $background-color: #ecf0f1;
 $text-color: #2c3e50;
+
+
+.custom{background-color: #063655;}
 
 .header{
   position: relative;
@@ -16,18 +19,19 @@ $text-color: #2c3e50;
 //================================================================================
 //================================================================================
 .h-primera-seccion{
-  position: absolute;
+  position: relative;
+  display: block;
   height: 30%;
   width: 100%;
   background-color: $primary-color;
 }
 .bloque-span-uno{
   position: absolute;
-  width: 20%;
+  width: 25%;
   height: 100%;
 
 
-  left: 15%;
+  left: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,20 +43,16 @@ $text-color: #2c3e50;
 .decoracion-uno{
 
     display: inline-block;
-    margin-left: 3%;
-
-
-
-
+    margin-left: 7%;
 
 
 
     width: 30%;
-    height: 25%;
-    border-radius: 20%;
+    height: 30%;
+    border-radius: 16%;
     background-color: $secondary-color;
 
-    color: white;
+
     font-weight: bold;
 
 
@@ -66,7 +66,7 @@ $text-color: #2c3e50;
   height: 100%;
 
 
-  left: 80%;
+  left: 75%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,7 +78,7 @@ $text-color: #2c3e50;
 .decoracion-dos{
 
   display: inline-block;
-  margin-left: 5%;
+  margin-left: 10%;
 
 
 
@@ -86,10 +86,11 @@ $text-color: #2c3e50;
 
   width: 10%;
   height: 60%;
-  border-radius: 100%;
-  background-color: $accent-color;
+  border-radius: 20%;
+  background-color: $background-color;
 
-  color: white;
+
+
 
 
 }
@@ -100,10 +101,33 @@ $text-color: #2c3e50;
 //================================================================================
 
 .h-segunda-seccion{
-  position: static;
+  position: relative;
   display: block;
+
   height: 70%;
   width: 100%;
   background-color: $secondary-color;
 }
 
+.bloque-span-tres{
+  position: absolute;
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 7%;
+
+}
+
+.bloque-span-cuatro{
+  position: absolute;
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 60%;
+  border-radius: 20%;
+
+}
