--- a/src/app/domains/main_page/main/main.component.html
+++ b/src/app/domains/main_page/main/main.component.html
@@ -1,2 +1,116 @@
-<p>main ulises!</p>
-<button type="button" class="btn btn-primary">Primary</button>
+<div class="row p-0 m-0 d-flex justify-content-center rowone">
+
+  <div class="col-12 p-0 m-0 ">
+    <section class="custom">
+
+      <h1 style="text-align: center;">BIENVENIDO</h1>
+      <p style="text-align: center;">a <strong>TODOELECTRONICA</strong> la Tienda de tu preferencia</p>
+    </section>
+
+  </div>
+
+
+</div>
+<div class="row  p-0 m-0 d-flex justify-content-center ">
+  <div class="col-9 d-flex justify-content-evenly">
+
+    <section>
+
+
+
+      <img src="assets/computadora-removebg-preview.png" alt="Computadoras" width="200" height="150">
+
+      <div style="text-align: center;"> <button  (click)="getComputadoras()"type="button" class="btn btn-primary btn-block">Computadoras</button></div>
+
+    </section>
+
+
+    <section>
+
+
+      <img src="assets/celular-removebg-preview.png"alt="Celulares" width="200" height="150">
+      <div style="text-align: center;"> <button (click)="getCelulares()" type="button" class="btn btn-primary btn-block">Celulares</button></div>
+    </section>
+
+    <section>
+
+      <img src="assets/tablets-removebg-preview.png"alt="tablets" width="200" height="150">
+      <div style="text-align: center;"> <button  (click)="getTablets()"type="button" class="btn btn-primary btn-block">Tablets</button></div>
+    </section>
+
+  </div>
+</div>
+
+<!-- COMPUTADORA -->
+<!-- ............................................ -->
+  <div *ngIf="this.boolean_computadora==true" class="card-container">
+
+
+      <mat-card style="text-align: center;" *ngFor="let item of this.array_computadoras_api" class="example-card" >
+
+        <mat-card-title>Computadora marca:{{item.marca}}</mat-card-title>
+        <mat-card-subtitle>Sistema Operativo: {{item.sistema_operativo}}</mat-card-subtitle>
+        <div>
+
+          <img width="200" height="150" mat-card-image [src]="this.img_computadora" alt="Computadoras">
+        </div>
+        <mat-card-content>
+          Descripcion:{{item.descripcion}}
+          <br>
+          Memoria RAM:{{item.memoria_ram}}
+          <br>
+          Almacenamiento: {{item.almacenamiento}}
+        </mat-card-content>
+      </mat-card>
+
+
+  </div>
+
+<!-- CELULARES -->
+<!-- ............................................ -->
+
+  <div *ngIf="this.boolean_celulares" class="card-container">
+
+
+    <mat-card style="text-align: center;" *ngFor="let item of this.array_celulares_api" class="example-card" >
+
+      <mat-card-title>Celular marca:{{item.marca}}</mat-card-title>
+      <mat-card-subtitle>Sistema Operativo: {{item.sistema_operativo}}</mat-card-subtitle>
+      <div>
+
+        <img width="200" height="150" mat-card-image [src]="this.img_celular" alt="Celulares">
+      </div>
+      <mat-card-content>
+        Procesador:{{item.procesador}}
+        <br>
+        Memoria RAM:{{item.ram}}
+        <br>
+        Almacenamiento: {{item.almacenamiento}}
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <!-- Tablets -->
+
+  <div *ngIf="this.boolean_tablets" class="card-container">
+
+
+    <mat-card style="text-align: center;" *ngFor="let item of this.array_tablets_api" class="example-card" >
+
+      <mat-card-title>Tablet marca:{{item.marca}}</mat-card-title>
+      <mat-card-subtitle>Sistema Operativo: {{item.sistema_operativo}}</mat-card-subtitle>
+      <div>
+
+        <img width="200" height="150" mat-card-image [src]="this.img_tablet" alt="Celulares">
+      </div>
+      <mat-card-content>
+        Procesador:{{item.procesador}}
+        <br>
+        Memoria RAM:{{item.ram}}
+        <br>
+        Almacenamiento: {{item.almacenamiento}}
+      </mat-card-content>
+    </mat-card>
+  </div>
+<!-- ............................................ -->
+
